--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     },
     "dependencies": {
         "react": "15.3.1",
-        "react-native": "0.33.0",
+        "react-native": "^0.39.0",
         "react-native-root-modal": "^1.0.4",
-        "react-native-svg": "4.3.1"
+        "react-native-svg": "^4.4.0"
     }
 }
