--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 
 # Xcode
 #
+build/
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -18,23 +19,37 @@ xcuserdata
 DerivedData
 *.hmap
 *.ipa
-gradle
+*.xcuserstate
 project.xcworkspace
 
-# Android/IJ
+# Android/IntelliJ
 #
+build/
 .idea
 .gradle
+gradle
 local.properties
-build
+*.iml
+
 
 # node.js
 #
-node_modules
+node_modules/
 npm-debug.log
 
+# BUCK
+buck-out/
+\.buckd/
+android/app/libs
+*.keystore
 
-# webstorm
+# fastlane
 #
-*.iml
+# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
+# screenshots whenever they are needed.
+# For more information about the recommended setup visit:
+# https://github.com/fastlane/fastlane/blob/master/fastlane/docs/Gitignore.md
 
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots
