--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-    "name": "SvgExample",
-    "version": "1.0.0",
-    "private": true,
-    "scripts": {
-        "start": "react-native start"
-    },
-    "dependencies": {
-        "react": "15.3.1",
-        "react-native": "^0.39.0",
-        "react-native-root-modal": "^1.0.4",
-        "react-native-svg": "^4.4.0"
-    }
+  "name": "SvgExample",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "start": "react-native start"
+  },
+  "dependencies": {
+    "react": "^15.4.0",
+    "react-native": "^0.40.0",
+    "react-native-root-modal": "^1.0.4",
+    "react-native-svg": "^4.6.1"
+  }
 }
