--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "start": "react-native start"
   },
   "dependencies": {
-    "react": "^15.4.0",
-    "react-native": "^0.42.0",
+    "react": "^16.0.0-alpha.12",
+    "react-native": "^0.45.0",
     "react-native-root-modal": "^1.0.4",
-    "react-native-svg": "^5.1.4"
+    "react-native-svg": "^5.2.0"
   }
 }
