--- a/package.json
+++ b/package.json
@@ -1,15 +1,30 @@
 {
   "name": "SvgExample",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+    "babel-eslint": "^7.2.3",
+    "eslint": "^4.6.1",
+    "eslint-plugin-react": "^7.3.0",
+    "jest-expo": "~20.0.0",
+    "react-native-scripts": "1.3.1",
+    "react-test-renderer": "16.0.0-alpha.12"
+  },
+  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
-    "start": "react-native start"
+    "start": "react-native-scripts start",
+    "eject": "react-native-scripts eject",
+    "android": "react-native-scripts android",
+    "ios": "react-native-scripts ios",
+    "test": "node node_modules/jest/bin/jest.js --watch"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "dependencies": {
-    "prop-types": "^15.5.10",
-    "react": "^16.0.0-alpha.12",
-    "react-native": "0.45.1",
-    "react-native-root-modal": "^1.0.4",
-    "react-native-svg": "^5.2.0"
+    "expo": "^20.0.0",
+    "react": "16.0.0-alpha.12",
+    "react-native": "^0.47.0",
+    "react-native-root-modal": "^1.1.1"
   }
 }
