--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
-  "name": "SvgExample",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "start": "react-native start"
-  },
-  "dependencies": {
-    "prop-types": "^15.5.10",
-    "react": "^16.0.0-alpha.12",
-    "react-native": "0.45.1",
-    "react-native-root-modal": "^1.0.4",
-    "react-native-svg": "^5.2.0"
-  }
+	"name": "SvgExample",
+	"version": "1.0.1",
+	"private": true,
+	"scripts": {
+		"start": "node node_modules/react-native/local-cli/cli.js start",
+		"test": "jest"
+	},
+	"dependencies": {
+		"react": "16.0.0-beta.5",
+		"react-native": "0.49.3",
+		"react-native-root-modal": "^1.4.0",
+		"react-native-root-siblings": "git+https://github.com/pyros2097/react-native-root-siblings.git#91f7e85",
+		"react-native-svg": "git+https://github.com/react-native-community/react-native-svg.git#6.0.0"
+	},
+	"devDependencies": {
+		"babel-jest": "21.2.0",
+		"babel-preset-react-native": "4.0.0",
+		"jest": "21.2.1",
+		"react-test-renderer": "16.0.0-beta.5"
+	},
+	"jest": {
+		"preset": "react-native"
+	}
 }
