--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   },
   "dependencies": {
     "prop-types": "^15.5.10",
-    "react": "^16.0.0-alpha.12",
-    "react-native": "0.45.1",
+    "react": "^16.0.0",
+    "react-native": "^0.50.0",
     "react-native-root-modal": "^1.0.4",
-    "react-native-svg": "^5.2.0"
+    "react-native-svg": "^6.0.0-rc12"
   }
 }
