--- a/package.json
+++ b/package.json
@@ -3,13 +3,28 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "react-native start"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "prop-types": "^15.5.10",
-    "react": "^16.0.0",
-    "react-native": "^0.50.0",
-    "react-native-root-modal": "^1.0.4",
-    "react-native-svg": "^6.0.0-rc12"
+    "react": "16.9.0",
+    "react-native": "0.61.5",
+    "react-native-svg": "^9.13.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.7.4",
+    "@babel/runtime": "^7.7.4",
+    "@react-native-community/eslint-config": "^0.0.5",
+    "babel-jest": "^24.9.0",
+    "eslint": "^6.7.1",
+    "jest": "^24.9.0",
+    "metro-react-native-babel-preset": "^0.57.0",
+    "react-test-renderer": "16.9.0"
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
